Replaced the argument framework with keystone-command
Deleted the local Argument, SubArgument, OptionalArgument, ConfirmArgument, DoubleArgument,
ArgumentResult, ArgumentLock, ArgumentSpecifier and ArgumentUtil classes. Command and
CommandManager are now thin subclasses of Keystone's, keeping the same names so the 195
subcommands only changed imports; the help layer, dev filters, Messages-localized errors
and the gangland.* permission prefix stay consumer-side. CommandTabCompleter is re-typed to
the Keystone Command.

GanglandContext installs ArgumentMessages suppliers so the errors Keystone's argument tree
emits itself are localized and follow a language reload, and opts into Brigadier client
completion through BrigadierTabRegistrar where the server supports it.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01SL2fpNXStRsn21A3zwDXBk